--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: bczyz's research
-email: bczyz@example.com
+#email: bczyz@example.com
 description: >- # this means to ignore newlines until "baseurl:"
         bczyz's cyber security research blog
 baseurl: "" # the subpath of your site, e.g. /blog
