fix site url variable; fix image paths

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: bczyz's research blog
 description: >- 
         bczyz's cyber security research blog
 baseurl: "/"
-url: "https://bczy1.github.io" 
+url: "https://bczyz1.github.io" 
 img: "/img"
 author: bczyz1
 twitter_username: bczyz1
