add linkedin profile

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ img: "/img"
 author: bczyz1
 twitter_username: bczyz1
 github_username:  bczyz1
+linkedin_username: bartłomiej-czyż-91416943
 
 # Build settings
 markdown: kramdown
