--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author: bczyz1
 twitter_username: bczyz1
 github_username:  bczyz1
 linkedin_username: bartłomiej-czyż-91416943
+linkedin_username_visible: bczyz1
 
 # Build settings
 markdown: kramdown
