--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ twitter_username: bczyz1
 github_username:  bczyz1
 linkedin_username: bartłomiej-czyż-91416943
 linkedin_username_visible: bczyz1
+google_analytics: UA-178101928-1
 
 # Build settings
 markdown: kramdown
