--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,10 @@ google_analytics: UA-178101928-1
 
 # Build settings
 markdown: kramdown
-theme: minima
+remote_theme: "songzivong/dark-minima"
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 minima:
         skin: dark
 
